<resources>
    <string name="app_name">Open Major</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="major1">산업디자인학과</string>
    <string name="major2">생명과학공학과</string>
    <string name="major3">수리과학과</string>
    <string name="major4">전기및전자공학부</string>
    <string name="major5">전산학부</string>

    <string name="ID">ID</string>
    <string name="Pass">Password</string>
    <string name="Reg">회원가입</string>
    <string name="Login">로그인</string>
    <string name="Lost">아이디/비밀번호 찾기</string>
    <string name="Find_id">아이디 찾기</string>
    <string name="Find_pass">비밀번호 찾기</string>

    <string name="email">Email</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="Logout">로그아웃</string>
    <string name="Search">검색</string>
</resources>
