<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87cefa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textSize="50sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/ID_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="#ffffff"
            android:inputType="text"
            android:hint="@string/ID" />

        <EditText
            android:id="@+id/Pass_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="#ffffff"
            android:inputType="textPassword"
            android:hint="@string/Pass" />

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="#059BE8"
            android:text="@string/Login"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <TextView
                android:id="@+id/Reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:textColor="#FFFFFF"
                android:text="@string/Reg" />

            <TextView
                android:id="@+id/Find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="#FFFFFF"
                android:text="@string/Lost" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>