<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/ID_find_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="#ffffff"
            android:hint="@string/ID"
            android:inputType="text" />

        <EditText
            android:id="@+id/Email_find_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="#ffffff"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/Confirm_find_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#059BE8"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/confirm" />
    </LinearLayout>

</RelativeLayout>