<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87cefa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/ID"
            android:id="@+id/ID_register"
            android:inputType="text"
            android:background="#ffffff"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Pass"
            android:id="@+id/Pass_register"
            android:inputType="textPassword"
            android:background="#ffffff"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:id="@+id/Email"
            android:inputType="textEmailAddress"
            android:background="#ffffff"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="#ffffff">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/Major"
            />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/confirm"
            android:id="@+id/Confirm_register"
            android:background="#059BE8"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"/>

    </LinearLayout>
</RelativeLayout>